<resources>
    <string name="app_name">Fametome</string>
    <string name="navigation_drawer_open">Ouvrir le navigation drawer</string>
    <string name="navigation_drawer_close">Fermer le navigation drawer</string>
    <string name="demo_message_flash_1">Bienvenu sur Fametome !</string>
    <string name="demo_message_flash_2">Ceci est un flash. Il peut être composé de sms, de photos et de faces !</string>
    <string name="demo_message_flash_3">Vous allez voir un sms, une photo et une face.</string>
    <string name="demo_message_flash_4">Un sms !</string>
    <string name="demo_message_flash_7">Ajoutez vos amis et envoyer leur des flashs !</string>
    <string name="demo_popup_account_title">Bienvenu sur Fametome !</string>
    <string name="demo_popup_account_message">
        Cette partie vous permet d\'ajouter et de consulter vos faces. Elles vous permettent de créer des smileys
        personnalisés avec votre visage. Vous pouvez également changer votre avatar en cliquant dessus.
    </string>
    <string name="demo_popup_add_face_title">Ajouter une face</string>
    <string name="demo_popup_add_face_message">
        Cette partie vous permet d\'ajouter une face, c\'est à dire un smiley personnalisé avec votre visage.
        Par exemple, prenez une photo de vous en souriant et associez lui le texte \' :) \'.
    </string>
    <string name="demo_popup_inbox_title">Boîte de réception</string>
    <string name="demo_popup_inbox_message">
        C\'est ici que vous pouvez consulter vos flashs. Pour voir un flash, cliquez dessus et regardez-le défiler.
        Une fois terminé, il est définitivement supprimé.
    </string>
    <string name="demo_popup_outbox_title">Envoie de flashs</string>
    <string name="demo_popup_outbox_message">
        C\'est ici que vous écrivez vos flashs, écrivez un simple sms ou envoyez une face en écrivant le
        texte qui y est associé. Vous pouvez aussi envoyer des photos en appuyant sur l\'image à droite.
        Les flashs sont limités à 7 éléments, remplissez-les comme vous voulez ! Choisissez ensuite les destinataires
        en appuyant sur la flèche en haut à droite
    </string>
    <string name="demo_popup_friends_title">Mes amis</string>
    <string name="demo_popup_friends_message">
        Consultez le profil de vos amis en cliquant sur leur avatar. Pour chercher de nouveaux amis, appuyez
        sur la loupe en haut à droite. Pour consulter vos demandes d\'amitiés, appuyez sur l\'îcone à gauche de la loupe.
    </string>
    <string name="demo_popup_friend_search_title">Chercher des amis</string>
    <string name="demo_popup_friend_search_message">
        Chercher vos amis en saisissant leur pseudo puis en appuyant sur "Chercher".
    </string>
    <string name="register_hint_username">Pseudo</string>
    <string name="register_hint_password">Mot de passe</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_phone">Telephone</string>
    <string name="register_login_error_title">Identifiants</string>
    <string name="register_login_error_message">Impossible de se connecter, vos identifiants sont incorrects.</string>
    <string name="register_login_without_network_title">Aucun réseau</string>
    <string name="register_login_without_network_message">Vous n\'êtes pas connectés à internet</string>
    <string name="register_sign_up_empty_username_title">Pseudo</string>
    <string name="register_sign_up_empty_username_message">Vous n\'avez pas entré votre pseudo.</string>
    <string name="register_sign_up_empty_password_title">Mot de passe</string>
    <string name="register_sign_up_empty_password_message">Vous n\'avez pas entré votre mot de passe.</string>
    <string name="register_sign_up_empty_email_title">Email</string>
    <string name="register_sign_up_empty_email_message">Vous n\'avez pas entré votre email.</string>
    <string name="register_sign_up_register_without_network_title">Aucun réseau</string>
    <string name="register_sign_up_register_without_network_message">Vous n\'êtes pas connectés à internet</string>
    <string name="register_sign_up_username_taken_title">Pseudo</string>
    <string name="register_sign_up_username_taken_message">Votre pseudo est déjà pris.</string>
    <string name="register_sign_up_email_taken_title">Email</string>
    <string name="register_sign_up_email_taken_message">Votre adresse email est déjà prise.</string>
    <string name="register_sign_up_email_invalid_title">Email</string>
    <string name="register_sign_up_email_invalid_message">Votre adresse email n\'est pas valide.</string>
    <string name="register_sign_up_error_title">Erreur</string>
    <string name="register_sign_up_error_message">Impossible de vous inscrire. Il y a une erreur.</string>
    <string name="signIn">Se connecter</string>
    <string name="register_login_register">S\'inscrire</string>
    <string name="register_signup_register">S\'inscrire</string>
    <string name="signUp">Inscription</string>
    <string name="proceed">Continuer</string>
    <string name="loading">Chargement…</string>
    <string name="more">+</string>
    <string name="cancel">Annuler</string>
    <string name="confirm">Confirmer</string>
    <string name="search">Chercher</string>
    <string name="navigation_drawer_account">Profil</string>
    <string name="account_title">Mon profil</string>
    <string name="account_face_pager_title">Mes faces</string>
    <string name="account_face_pager_delete_message">Etes vous sûr de vouloir supprimer cette face ?</string>
    <string name="account_face_album_title">Mes faces</string>
    <string name="account_all_faces">Toutes mes faces</string>
    <string name="account_empty_face">Aucune faces</string>
    <string name="account_face_add">Ajouter une face</string>
    <string name="account_face_delete">Supprimer</string>
    <string name="account_add_face_title">Ajouter une face</string>
    <string name="account_add_face_button">Ajouter</string>
    <string name="account_add_face_without_wifi_title">Aucun réseau</string>
    <string name="account_add_face_without_wifi_message">Vous ne pouvez pas ajouter de faces sans réseau.</string>
    <string name="account_change_avatar_without_wifi_title">Aucun réseau</string>
    <string name="account_change_avatar_without_wifi_message">Vous ne pouvez pas changer votre photo de profil sans être connecté à Internet.</string>
    <string name="account_change_avatar_loading_title">Chargement</string>
    <string name="account_change_avatar_loading_message">Chargement de l\'avatar</string>
    <string name="settings_title">Options</string>
    <string name="settings_separator_account">Mon compte</string>
    <string name="settings_separator_about">A propos</string>
    <string name="settings_separator_log_out">Deconnexion</string>
    <string name="settings_terms_of_use">Conditions d\'utilisations</string>
    <string name="settings_terms_of_use_title">Conditions d\'utilisations</string>
    <string name="settings_terms_of_use_message">
        Fametome est une application mobile disponible sur Android et iOS.
        Il s\'agit d\'une messagerie. Les messages échangés sont composés de plusieurs élements appelés "Flash"
        qui défilent succèsivement de gauche à droite lorsqu\'on les visionnent.
        Une fois visionné, le message est détruit. Vous pouvez choisir à qui vous envoyez des messages et qui peut vous en envoyer également.
        L\'anonymat est garanti par un pseudonyme dans toute l\'application.
        Des règles de bases s\'appliquent lors de l\'utilisation du service Fametome à savoir:
        ne pas échanger des messages irrespectueux ou incitant à la haine,
        ne pas envoyer des images violentes ou obscènes  et ne pas tenter d\'abuser de la credulité d\'autres membres.
        De manière plus générale, la loi Française s\'applique.
    </string>
    <string name="settings_privacy_policy">Politique de confidentialité</string>
    <string name="settings_privacy_policy_title">Politique de confidentialité</string>
    <string name="settings_privacy_policy_message">
        L\'anonymat est garantit lors de l\'utilisation de Fametome.
        L\'adresse e-mail et le numéro de téléphone que vous renseigner à l\'inscription n\'apparaît pas pour les autres utilisateurs,
        même s\'ils sont dans votre liste d\'amis.
        Ces informations nous sont indispensables pour garantir l\'unicité de votre compte et pour vous contacter en cas de perte de mot de passe.
        Les seuls informations que vos amis peuvent voir sur vous sont votre pseudonyme ainsi que divers statistiques sur le nombre de message que vous avez envoyé,
        ration image/sms... etc... A tout moment vous pouvez choisir d\'accepter ou de refuser une demande d\'amitié d\'un autre membre,
        et vous pouvez également faire des demandes à n\'importe quel autre membre. Vous pouvez également vous désinscrire,
        ce qui aura pour effet de supprimer l\'intégralité des données vous concernant de nos serveurs.
    </string>
    <string name="settings_sign_out">Se déconnecter</string>
    <string name="menu_account_settings">Options</string>
    <string name="menu_friends_search">Chercher</string>
    <string name="menu_friends_request">Demande d\'amitiée</string>
    <string name="menu_friends_requests_refresh">Rafraichir</string>
    <string name="menu_inbox_refresh">Rafraichir</string>
    <string name="menu_outbox_send">Envoyer</string>
    <string name="menu_outbox_choose_recipient_send">Envoyer</string>
    <string name="inbox_title">Reception</string>
    <string name="inbox_item_description">%1$s vous a envoyé un flash.</string>
    <string name="inbox_show">Voir le flash</string>
    <string name="inbox_empty_title">Aucun flashs</string>
    <string name="inbox_empty_message">Appuyez sur l\'écran pour charger des flashs plus récents.</string>
    <string name="inbox_no_network_title">Aucun réseau</string>
    <string name="inbox_no_network_message">Vous n\'êtes pas connectés à Internet.</string>
    <string name="inbox_refresh_dialog_title">Rafraichissement</string>
    <string name="inbox_refresh_dialog_message">Rafraichissement de vos flashs.</string>
    <string name="inbox_response_title">Répondre</string>
    <string name="inbox_response_message">Voulez vous répondre à %1$s ?</string>
    <string name="inbox_response_button">Répondre</string>
    <string name="inbox_response_back">Retour</string>
    <string name="outbox_title">Envoi</string>
    <string name="outbox_mono_destinataire_title">A %1$s</string>
    <string name="outbox_button_add">Ajouter</string>
    <string name="outbox_button_time">Temps</string>
    <string name="outbox_send_message_progress_title">Envoi</string>
    <string name="outbox_send_message_progress_message">Envoi de votre flash en cours.</string>
    <string name="outbox_send_without_friends_title">Aucun amis</string>
    <string name="outbox_send_without_friends_message">Vous n\'avez pas encore d\'amis à qui envoyer vos flashs, ajoutez-en !</string>
    <string name="outbox_send_with_empty_message_title">Flash vide</string>
    <string name="outbox_send_with_empty_message_message">Vous ne pouvez pas envoyé de flash vide.</string>
    <string name="outbox_send_choose_recipients_empty_title">Selection vide</string>
    <string name="outbox_send_choose_recipients_empty_message">Vous devez choisir au moins un ami.</string>
    <string name="outbox_send_without_network_title">Aucun réseau</string>
    <string name="outbox_send_without_network_message">Vous ne pouvez pas envoyer de flash sans être connecté à Internet.</string>
    <string name="outbox_flash_text_when_picture">Photo</string>
    <string name="outbox_choose_recipients_title">Destinataires</string>
    <string name="friends_all">Tous mes amis</string>
    <string name="friends_add">Ajouter un ami</string>
    <string name="friends_search_add">Ajouter à mes amis</string>
</resources>