<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <com.fametome.widget.TitleTextView
        android:textColor="@color/login_text"
        android:text="@string/app_name"
        style="@style/registerTitle"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:hint="@string/register_hint_username"
            style="@style/registerFieldTop"/>

        <EditText
            android:id="@+id/password"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            style="@style/registerFieldCenter"/>
        
        <com.fametome.widget.LoadingButton
            android:id="@+id/connect"
            android:text="@string/signIn"
            style="@style/registerButtonConfirm" />

    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/register_copyright_margin_bottom"
        android:padding="16dp"
        android:text="@string/register_login_register"
        android:textColor="@color/login_text"
        android:background="@color/invisible"/>

</RelativeLayout>